Fix form styling on mobile

--- a/docs/css/form.css
+++ b/docs/css/form.css
@@ -4,6 +4,7 @@ form {
   margin: 0 auto;
   display: flex;
   justify-content: center;
+  width: 90%;
 }
 
 form input {
